Разработано консольное приложение HRM Lite для управления персоналом